make it responsive

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,21 +1,25 @@
-.headercontainer{
+.headercontainer {
     background-color: #F27052;
     height: 95px;
     border-radius: 10px;
 }
-.header{
+
+.header {
     display: flex;
     justify-content: center;
     padding-top: 5px;
     padding-bottom: 5px;
 }
-.header .img{
+
+.header .img {
     margin-right: 15px;
 }
-form{
-    padding-left: 5px;
+
+form {
+    padding-left: 20px;
 }
-.taskInput{
+
+.taskInput {
     width: 280px;
     padding: 12px;
     border-radius: 15px;
@@ -25,10 +29,12 @@ form{
     background-color: white;
     color: #0D0D0D;
 }
-.taskInput:focus{
-    outline:none  ;
+
+.taskInput:focus {
+    outline: none;
 }
-.sunmitbtn{
+
+.sunmitbtn {
     width: 80px;
     padding: 12px;
     cursor: pointer;
@@ -38,14 +44,42 @@ form{
     color: white;
     background-color: #0D0D0D;
 }
-.sunmitbtn:hover{    
+
+.sunmitbtn:hover {
     transform: scale(1.1);
-    
+
 }
-.sunmitbtn:disabled{
+
+.sunmitbtn:disabled {
     cursor: not-allowed;
     opacity: .3;
     transform: scale(1);
     color: white;
     background-color: #0D0D0D;
 }
+@media screen and (min-width: 320px) and (max-width: 360px) {
+    .taskInput {
+        width: 200px;
+    }
+    form{
+        padding-left: 5px;
+    }
+}
+@media screen and (min-width: 360px) and (max-width: 392px){
+    .taskInput {
+        width: 200px;
+    }
+    form{
+        padding-left: 5px;
+    }
+}
+
+@media screen and (min-width: 392px) and (max-width: 469px){
+    .taskInput{
+        width: 245px;
+    }
+    form {
+        padding-left: 5px;
+    }
+}
+
