--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,37 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 
 }
-body{
+
+body {
   background-color: #0D0D0D;
 
 }
-.AppContainer{
+
+.AppContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
 }
-.App{
+
+.App {
   width: 450px;
+}
+
+
+
+@media screen and (min-width: 360px) and (max-width: 392px) {
+  .App {
+    width: 310px;
+  }
+}
+
+@media screen and (min-width: 392px) and (max-width: 469px) {
+  .App {
+    width: 350px;
+    color: white;
+  }
 }
