edit complete tasks

--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -22,6 +22,10 @@ ul {
     border-radius: 5px;
 }
 
+.listItem span{
+    width: 180px;
+    overflow: hidden;
+}
 .btns {
     width: 100px;
     display: flex;
