--- a/src/Components/Palestine.css
+++ b/src/Components/Palestine.css
@@ -4,11 +4,18 @@
     justify-content: center;
     align-items: center;
 }
-.Palestinecontainer img{
+.Palestinecontainer img,.Palestinecontainerdark img{
     width: 25px;
     height: 25px;
 }
-.Palestinecontainer h3{
+.Palestinecontainer h3,.Palestinecontainerdark h3{
     margin-left: 25px;
     margin-right: 25px;
+}
+.Palestinecontainerdark{
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
